[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Objects/Chest_01_Unlocked.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Treasure_Chest.gd" type="Script" id=2]
[ext_resource path="res://Assets/Collected.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/coin.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "collected",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48.5, 51.5 )

[node name="Treasure_Chest" type="Area2D"]
script = ExtResource( 2 )

[node name="mySprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.5, 5.5 )
shape = SubResource( 1 )

[node name="coinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Treasure_Chest_body_entered"]
